不使用cdn使用本地jquery

--- a/preview.html
+++ b/preview.html
@@ -5,12 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
-        <script src="assert/polyfill/polyfill.min.js"></script>
-		<script
-			src="https://code.jquery.com/jquery-1.12.4.min.js"
-			integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
-			crossorigin="anonymous"
-		></script>
+		<script src="assert/polyfill/polyfill.min.js"></script>
+		<script src="assert/jquery/jquery.1.12.4.min.js"></script>
 		<style type="text/css">
 			html {
 				margin: 0;
@@ -274,7 +270,9 @@
 						        <div class="reply">
 						            <img
 										src="${item.avatar}"
-                                        data-has-error="0" data-content-export="${item.avatar_export}" onerror="onLoadError(this)"
+                                        data-has-error="0" data-content-export="${
+											item.avatar_export
+										}" onerror="onLoadError(this)"
 										class="avatar"
 									/>
 									<div class="text-box">
@@ -295,7 +293,9 @@
 						        <div class="send">
 						            <img
 										src="${item.avatar}"
-                                        data-has-error="0" data-content-export="${item.avatar_export}" onerror="onLoadError(this)"
+                                        data-has-error="0" data-content-export="${
+											item.avatar_export
+										}" onerror="onLoadError(this)"
 										class="avatar"
 									/>
 									<div class="text-box">
