--- a/preview_es6.html
+++ b/preview_es6.html
@@ -226,7 +226,7 @@
 					case 'video':
 						return `<div class="talk">
                             <div>视频：${record.content}</div>
-                            <video src="${record.content}" data-has-error="0" data-content-export="${record.content_export}" onerror="onLoadError(this)" style="max-width:580px;width:580px;max-height:500px"></video>
+                            <video src="${record.content}" data-has-error="0" data-content-export="${record.content_export}" onerror="onLoadError(this)" style="max-width:580px;max-height:500px"></video>
                         </div>`;
 					case 'audio':
 						return `<div class="talk">音频：${record.content}</div>`;
