--- a/preview.html
+++ b/preview.html
@@ -9,7 +9,7 @@
 		<script src="assert/jquery/jquery.1.12.4.min.js"></script>
 		<style type="text/css">
 html{margin:0;padding:0;font-size:62.5%}
-body{margin:0;padding:0;font-size:1.4rem;font-family: "Microsoft Yahei,NSimSun"}
+body{margin:0;padding:0;font-size:1.4rem;font-family: "Microsoft Yahei","NSimSun"}
 .list-root{margin:0 20px;padding:0}
 .list-row{list-style-type:none;margin:0;padding:2px 10px}
 .list-row del{font-size:12px;color:#f00;text-decoration:none;margin-left:10px;padding:2px 3px;background-color:#fff1f0;border:1px solid #ffa39e;border-radius:2px}
