--- a/preview_es6.html
+++ b/preview_es6.html
@@ -17,7 +17,7 @@
 				margin: 0;
 				padding: 0;
 				font-size: 1.4rem;
-				font-family: "Microsoft Yahei,NSimSun";
+				font-family: "Microsoft Yahei","NSimSun";
 			}
 			.list-root {
 				margin: 0 20px;
