--- a/preview_es6.html
+++ b/preview_es6.html
@@ -140,6 +140,7 @@
 				color: #3d4c5a;
 				line-height: 2rem;
 				background-color: #94ee6a;
+				word-break: break-all;
 			}
 			.reply .talk:after {
 				display: block;
