--- a/preview.html
+++ b/preview.html
@@ -1,56 +1,143 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
-		<script src="assert/polyfill/polyfill.min.js"></script>
-		<script src="assert/jquery/jquery.1.12.4.min.js"></script>
-		<style type="text/css">
-html{margin:0;padding:0;font-size:62.5%}
-body{margin:0;padding:0;font-size:1.4rem;font-family: "Microsoft Yahei","NSimSun"}
-.list-root{margin:0 20px;padding:0}
-.list-row{list-style-type:none;margin:0;padding:2px 10px}
-.list-row del{font-size:12px;color:#f00;text-decoration:none;margin-left:10px;padding:2px 3px;background-color:#fff1f0;border:1px solid #ffa39e;border-radius:2px}
-.send{display:flex;flex-direction:row;justify-content:flex-start;align-items:center}
-.send .avatar{display:block;position:relative;width:50px;height:50px;border:1px solid #efefef}
-.send .ant-tag{margin-left:10px}
-.send .text-box{display:flex;flex-direction:column;margin-left:15px}
-.send .talk{position:relative;max-width:600px;height:auto;border:1px solid #d1d8dc;padding:6px;color:#3d4c5a;line-height:2rem;background-color:#fff;word-break:break-all}
-.send .talk:after{display:block;position:absolute;top:calc(50% - 5px);left:-6px;width:10px;height:10px;content:' ';border-bottom:1px solid #d1d8dc;border-left:1px solid #d1d8dc;transform:rotate(45deg);background-color:#fff}
-.send .talk img{max-width:480px;max-height:400px}
-.send .user-name{font-family:'Microsoft YaHei';color:#222;padding:5px 0}
-.send .user-name em{font-style:normal;color:#999}
-.send time{color:#999;padding:5px 0}
-.reply{display:flex;flex-direction:row-reverse;justify-content:flex-start;align-items:center}
-.reply .avatar{display:block;position:relative;width:50px;height:50px;border:1px solid #efefef}
-.reply .text-box{display:flex;flex-direction:column;margin-right:15px}
-.reply .user-name{font-family:'Microsoft YaHei';color:#222}
-.reply .user-name em{font-style:normal;color:#999}
-.reply .talk{position:relative;max-width:600px;border:1px solid #d1d8dc;padding:6px;color:#3d4c5a;line-height:2rem;background-color:#94ee6a;word-break:break-all;}
-.reply .talk:after{display:block;position:absolute;top:calc(50% - 5px);right:-6px;width:10px;height:10px;content:' ';border-top:1px solid #d1d8dc;border-right:1px solid #d1d8dc;transform:rotate(45deg);background-color:#94ee6a}
-.reply img{max-width:480px;max-height:400px}
-.message{display:flex;flex-direction:column;justify-content:center;align-items:center}
-.message p{color:#222;background-color:#dddddd;padding:5px 20px;border-radius:5px}
-.message .other{display:flex;flex-direction:row}
-		</style>
-	</head>
-	<body>
-		<div id="target" class="list-root"></div>
-		<script type="text/javascript">
-var $jscomp=$jscomp||{};$jscomp.scope={};$jscomp.createTemplateTagFirstArg=function(a){return a.raw=a};$jscomp.createTemplateTagFirstArgWithRaw=function(a,c){a.raw=c;return a};$jscomp.arrayIteratorImpl=function(a){var c=0;return function(){return c<a.length?{done:!1,value:a[c++]}:{done:!0}}};$jscomp.arrayIterator=function(a){return{next:$jscomp.arrayIteratorImpl(a)}};$jscomp.makeIterator=function(a){var c="undefined"!=typeof Symbol&&Symbol.iterator&&a[Symbol.iterator];return c?c.call(a):$jscomp.arrayIterator(a)};
-window.onload=function(){var a=window.location.search,c=parseURLSearch(a,"file");a=parseURLSearch(a,"p");for(var b=[],e=0;e<Number(a);e++)b=b.concat([loadJSON("public/data/"+c+"-"+(e+1)+".json","data")]);Promise.all(b).then(function(d){return d.map(function(f){return f.row}).reduce(function(f,g){return f=f.concat(g)},[])}).then(function(d){$("#target").html(render(d))}).catch(function(d){return console.log(d)})};
-function onLoadError(a){if("0"===a.getAttribute("data-has-error")){a.setAttribute("data-has-error","1");var c=a.getAttribute("data-content-export");a.setAttribute("src",c)}}
-function renderContent(a){switch(a.type){case "text":return'<div class="talk">'+a.content+"</div>";case "photo":return' <div class="talk"> <img src="'+a.content+'" data-has-error="0" data-content-export="'+a.content_export+'" onerror="onLoadError(this)" /> </div>';case "video":return'<div class="talk"> <div>\u89c6\u9891\uff1a'+a.content+'</div> <video src="'+
-a.content+'" data-has-error="0" data-content-export="'+a.content_export+'" onerror="onLoadError(this)" style="max-width:580px;max-height:500px"></video> </div>';case "audio":return'<div class="talk">\u97f3\u9891\uff1a'+a.content+"</div>";case "reward":return'<div class="talk">\u7ea2\u5305\uff1a'+JSON.stringify(a.content)+"</div>";case "transfer":return'<div class="talk">\u8f6c\u5e10\uff1a'+JSON.stringify(a.content)+"</div>";case "file":return'<div class="talk">\u6587\u4ef6/\u9644\u4ef6\uff1a'+
-a.content+"</div>";case "audio_call":return'<div class="talk">\u97f3\u9891\u901a\u8bdd</div>';case "video_call":return'<div class="talk">\u89c6\u9891\u901a\u8bdd</div>';case "locate":return'<div class="talk">\u4f4d\u7f6e\u6d88\u606f\uff1a'+JSON.stringify(a.content)+"</div>";default:return'<div class="talk">'+JSON.stringify(a.content)+"</div>"}}
-function render(a){var c="";a.forEach(function(b){c="message"===b.type?c+('<div class="list-row"><div class="message"><p>'+b.content+'</p><div className="other"><time>'+b.time+"</time></div>"+(b.del?"<del>\u5df2\u5220\u9664</del>":"")+"</div></div>"):b.send?c+(' <div class="list-row"><div class="reply"><img src="'+
-b.avatar+'" data-has-error="0" data-content-export="'+b.avatar_export+'" onerror="onLoadError(this)" class="avatar"/><div class="text-box"><div class="user-name"><span>'+b.nickname+"</span><em>("+b.id+")</em></div>"+renderContent(b)+"<time>"+b.time+"</time></div>"+
-(b.del?"<del>\u5df2\u5220\u9664</del>":"")+"</div></div>"):c+('<div class="list-row"><div class="send"><img src="'+b.avatar+'" data-has-error="0" data-content-export="'+b.avatar_export+'" onerror="onLoadError(this)" class="avatar" /><div class="text-box"><div class="user-name"><span>'+
-b.nickname+"</span><em>("+b.id+")</em></div>"+renderContent(b)+"<time>"+b.time+"</time></div>"+(b.del?"<del>\u5df2\u5220\u9664</del>":"")+"</div></div>")});return c}
-function loadJSON(a,c){c=void 0===c?"data":c;var b=document.createElement("script");return new Promise(function(e,d){b.src=a;b.addEventListener("load",function(){document.body.removeChild(b);e(window[c])});b.addEventListener("error",function(f){document.body.removeChild(b);d(f)});document.body.appendChild(b)})}
-function parseURLSearch(a,c){if(void 0!==window.URLSearchParams)return(new URLSearchParams(a)).get(c);a.startsWith("?")&&(a=a.substring(1));a=a.split("&");for(var b=null,e=0;e<a.length;e++){var d=$jscomp.makeIterator(a[e].split("=")),f=d.next().value;d=d.next().value;if(f===c){b=d;break}}return b};
-		</script>
-	</body>
-</html>
+<!doctypehtml><html lang=zh-CN><meta charset=UTF-8><meta content="IE=edge"http-equiv=X-UA-Compatible><meta content="width=device-width,initial-scale=1"name=viewport><title>Document</title><script src=assert/polyfill/polyfill.min.js></script><script src=assert/jquery/jquery.1.12.4.min.js></script><style>html{margin:0;padding:0;font-size:62.5%}body{margin:0;padding:0;font-size:1.4rem;font-family:'Microsoft Yahei',NSimSun}.list-root{margin:0 20px;padding:0}.list-row{list-style-type:none;margin:0;padding:2px 10px}.list-row .del{font-size:12px;color:red;text-decoration:none;margin:0 5px;padding:2px 3px;background-color:#fff1f0;border:1px solid #ffa39e;border-radius:2px}.list-row .recall{font-size:12px;color:#00abd2;text-decoration:none;margin:0 5px;padding:2px 3px;background-color:rgb(0,171,210,.05);border:1px solid #00abd2;border-radius:2px}.send{display:flex;flex-direction:row;justify-content:flex-start;align-items:center}.send .avatar{display:block;position:relative;width:50px;height:50px;border:1px solid #efefef}.send .ant-tag{margin-left:10px}.send .text-box{display:flex;flex-direction:column;margin-left:15px}.send .talk{position:relative;max-width:600px;height:auto;border:1px solid #d1d8dc;padding:6px;color:#3d4c5a;line-height:2rem;background-color:#fff;word-break:break-all}.send .talk:after{display:block;position:absolute;top:calc(50% - 5px);left:-6px;width:10px;height:10px;content:' ';border-bottom:1px solid #d1d8dc;border-left:1px solid #d1d8dc;transform:rotate(45deg);background-color:#fff}.send .talk img{max-width:480px;max-height:400px}.send .user-name{font-family:'Microsoft YaHei';color:#222;padding:5px 0}.send .user-name em{font-style:normal;color:#999}.send time{color:#999;padding:5px 0}.reply{display:flex;flex-direction:row-reverse;justify-content:flex-start;align-items:center}.reply .avatar{display:block;position:relative;width:50px;height:50px;border:1px solid #efefef}.reply .text-box{display:flex;flex-direction:column;margin-right:15px}.reply .user-name{font-family:'Microsoft YaHei';color:#222}.reply .user-name em{font-style:normal;color:#999}.reply .talk{position:relative;max-width:600px;border:1px solid #d1d8dc;padding:6px;color:#3d4c5a;line-height:2rem;background-color:#94ee6a;word-break:break-all}.reply .talk:after{display:block;position:absolute;top:calc(50% - 5px);right:-6px;width:10px;height:10px;content:' ';border-top:1px solid #d1d8dc;border-right:1px solid #d1d8dc;transform:rotate(45deg);background-color:#94ee6a}.reply img{max-width:480px;max-height:400px}.message{display:flex;flex-direction:column;justify-content:center;align-items:center}.message p{color:#222;background-color:#ddd;padding:5px 20px;border-radius:5px}.message .other{display:flex;flex-direction:row}</style><div class=list-root id=target></div><script>window.onload = () => {
+				const { search } = window.location;
+				const file = parseURLSearch(search, 'file');
+				const p = parseURLSearch(search, 'p');
+				let task = [];
+
+				for (let i = 0; i < Number(p); i++) {
+					task = task.concat([loadJSON(`public/data/${file}-${i + 1}.json`, 'data')]);
+				}
+				Promise.all(task)
+					.then((data) => {
+						return data
+							.map((i) => i.row)
+							.reduce((total, current) => {
+								total = total.concat(current);
+								return total;
+							}, []);
+					})
+					.then((data) => {
+						$('#target').html(render(data));
+					})
+					.catch((err) => console.log(err));
+			};
+
+			function onLoadError($ele) {
+				const notError = $ele.getAttribute('data-has-error') === '0';
+				if (notError) {
+					$ele.setAttribute('data-has-error', '1');
+					const contentExport = $ele.getAttribute('data-content-export');
+					$ele.setAttribute('src', contentExport);
+				}
+			}
+
+			function renderContent(record) {
+				switch (record.type) {
+					case 'text':
+						return `<div class="talk">${record.content}</div>`;
+					case 'photo':
+						return `<div class="talk"><img src="${record.content}" data-has-error="0" data-content-export="${record.content_export}" onerror="onLoadError(this)" /></div>`;
+					case 'video':
+						return `<div class="talk"><div>视频：${record.content}</div><video src="${record.content}" data-has-error="0" data-content-export="${record.content_export}" onerror="onLoadError(this)" style="max-width:580px;max-height:500px"></video></div>`;
+					case 'audio':
+						return `<div class="talk">音频：${record.content}</div>`;
+					case 'reward':
+						return `<div class="talk">红包：${JSON.stringify(record.content)}</div>`;
+					case 'transfer':
+						return `<div class="talk">转帐：${JSON.stringify(record.content)}</div>`;
+					case 'file':
+						return `<div class="talk">文件/附件：${record.content}</div>`;
+					case 'audio_call':
+						return `<div class="talk">音频通话</div>`;
+					case 'video_call':
+						return `<div class="talk">视频通话</div>`;
+					case 'locate':
+						return `<div class="talk">位置消息：${JSON.stringify(
+							record.content
+						)}</div>`;
+					default:
+						return `<div class="talk">${JSON.stringify(record.content)}</div>`;
+				}
+			}
+
+			function renderDelMark(mark) {
+				switch (mark) {
+					case 0:
+						return '';
+					case 1:
+						return '<span class="del">已删除</span>';
+					case 2:
+						return '<span class="recall">已撤回</span>';
+					default:
+						return '';
+				}
+			}
+
+			function render(data) {
+				let html = '';
+				data.forEach((item) => {
+					if (item.type === 'message') {
+						html += `<div class="list-row"><div class="message"><p>${
+							item.content
+						}</p><div className="other"><time>${item.time}</time></div>${renderDelMark(
+							item.del
+						)}</div></div>`;
+					} else if (item.send) {
+						html += `<div class="list-row"><div class="reply"><img src="${
+							item.avatar
+						}" data-has-error="0" data-content-export="${
+							item.avatar_export
+						}" onerror="onLoadError(this)" class="avatar" /><div class="text-box"><div class="user-name"><span>${
+							item.nickname
+						}</span><em>(${item.id})</em></div>${renderContent(item)}<time>${
+							item.time
+						}</time></div>${renderDelMark(item.del)}</div></div>`;
+					} else {
+						html += `<div class="list-row"><div class="send"><img src="${
+							item.avatar
+						}" data-has-error="0" data-content-export="${
+							item.avatar_export
+						}" onerror="onLoadError(this)" class="avatar"/><div class="text-box"><div class="user-name"><span>${
+							item.nickname
+						}</span><em>(${item.id})</em></div>${renderContent(item)}<time>${
+							item.time
+						}</time></div>${renderDelMark(item.del)}</div></div>`;
+					}
+				});
+				return html;
+			}
+
+			function loadJSON(filePath, exportName = 'data') {
+				let $script = document.createElement('script');
+				return new Promise((resolve, reject) => {
+					$script.src = filePath;
+					$script.addEventListener('load', () => {
+						document.body.removeChild($script);
+						resolve(window[exportName]);
+					});
+					$script.addEventListener('error', (event) => {
+						document.body.removeChild($script);
+						reject(event);
+					});
+					document.body.appendChild($script);
+				});
+			}
+			function parseURLSearch(search, name) {
+				if (window.URLSearchParams !== undefined) {
+					return new URLSearchParams(search).get(name);
+				}
+
+				if (search.startsWith('?')) {
+					search = search.substring(1);
+				}
+				const kv = search.split('&');
+				let value = null;
+				for (let i = 0; i < kv.length; i++) {
+					const [k, v] = kv[i].split('=');
+					if (k === name) {
+						value = v;
+						break;
+					}
+				}
+				return value;
+			}</script>
