--- a/preview_es6.html
+++ b/preview_es6.html
@@ -17,7 +17,7 @@
 				margin: 0;
 				padding: 0;
 				font-size: 1.4rem;
-				font-family: "Microsoft Yahei","NSimSun";
+				font-family: 'Microsoft Yahei', 'NSimSun';
 			}
 			.list-root {
 				margin: 0 20px;
@@ -28,14 +28,24 @@
 				margin: 0;
 				padding: 2px 10px;
 			}
-			.list-row del {
+			.list-row .del {
 				font-size: 12px;
 				color: #f00;
 				text-decoration: none;
-				margin-left: 10px;
+				margin: 0 5px;
 				padding: 2px 3px;
 				background-color: #fff1f0;
 				border: 1px solid #ffa39e;
+				border-radius: 2px;
+			}
+			.list-row .recall {
+				font-size: 12px;
+				color: rgb(0, 171, 210);
+				text-decoration: none;
+				margin: 0 5px;
+				padding: 2px 3px;
+				background-color: rgb(0, 171, 210, 0.05);
+				border: 1px solid rgb(0, 171, 210);
 				border-radius: 2px;
 			}
 			.send {
@@ -236,9 +246,24 @@
 					case 'video_call':
 						return `<div class="talk">视频通话</div>`;
 					case 'locate':
-						return `<div class="talk">位置消息：${JSON.stringify(record.content)}</div>`;
+						return `<div class="talk">位置消息：${JSON.stringify(
+							record.content
+						)}</div>`;
 					default:
 						return `<div class="talk">${JSON.stringify(record.content)}</div>`;
+				}
+			}
+
+			function renderDelMark(mark) {
+				switch (mark) {
+					case 0:
+						return '';
+					case 1:
+						return '<span class="del">已删除</span>';
+					case 2:
+						return '<span class="recall">已撤回</span>';
+					default:
+						return '';
 				}
 			}
 
@@ -246,11 +271,31 @@
 				let html = '';
 				data.forEach((item) => {
 					if (item.type === 'message') {
-						html += `<div class="list-row"><div class="message"><p>${item.content}</p><div className="other"><time>${item.time}</time></div>${item.del ? '<del>已删除</del>' : ''}</div></div>`;
+						html += `<div class="list-row"><div class="message"><p>${
+							item.content
+						}</p><div className="other"><time>${item.time}</time></div>${renderDelMark(
+							item.del
+						)}</div></div>`;
 					} else if (item.send) {
-						html += `<div class="list-row"><div class="reply"><img src="${item.avatar}" data-has-error="0" data-content-export="${item.avatar_export}" onerror="onLoadError(this)" class="avatar" /><div class="text-box"><div class="user-name"><span>${item.nickname}</span><em>(${item.id})</em></div>${renderContent(item)}<time>${item.time}</time></div>${item.del ? '<del>已删除</del>' : ''}</div></div>`;
+						html += `<div class="list-row"><div class="reply"><img src="${
+							item.avatar
+						}" data-has-error="0" data-content-export="${
+							item.avatar_export
+						}" onerror="onLoadError(this)" class="avatar" /><div class="text-box"><div class="user-name"><span>${
+							item.nickname
+						}</span><em>(${item.id})</em></div>${renderContent(item)}<time>${
+							item.time
+						}</time></div>${renderDelMark(item.del)}</div></div>`;
 					} else {
-						html += `<div class="list-row"><div class="send"><img src="${item.avatar}" data-has-error="0" data-content-export="${item.avatar_export}" onerror="onLoadError(this)" class="avatar"/><div class="text-box"><div class="user-name"><span>${item.nickname}</span><em>(${item.id})</em></div>${renderContent(item)}<time>${item.time}</time></div>${item.del ? '<del>已删除</del>' : ''}</div></div>`;
+						html += `<div class="list-row"><div class="send"><img src="${
+							item.avatar
+						}" data-has-error="0" data-content-export="${
+							item.avatar_export
+						}" onerror="onLoadError(this)" class="avatar"/><div class="text-box"><div class="user-name"><span>${
+							item.nickname
+						}</span><em>(${item.id})</em></div>${renderContent(item)}<time>${
+							item.time
+						}</time></div>${renderDelMark(item.del)}</div></div>`;
 					}
 				});
 				return html;
