删除标记兼容布尔类型

--- a/preview.html
+++ b/preview.html
@@ -65,6 +65,7 @@
 					case 0:
 						return '';
 					case 1:
+					case true:
 						return '<span class="del">已删除</span>';
 					case 2:
 						return '<span class="recall">已撤回</span>';
