--- a/preview.html
+++ b/preview.html
@@ -1,144 +1,1 @@
-<!doctypehtml><html lang=zh-CN><meta charset=UTF-8><meta content="IE=edge"http-equiv=X-UA-Compatible><meta content="width=device-width,initial-scale=1"name=viewport><title>Document</title><script src=assert/polyfill/polyfill.min.js></script><script src=assert/jquery/jquery.1.12.4.min.js></script><style>html{margin:0;padding:0;font-size:62.5%}body{margin:0;padding:0;font-size:1.4rem;font-family:'Microsoft Yahei',NSimSun}.list-root{margin:0 20px;padding:0}.list-row{list-style-type:none;margin:0;padding:2px 10px}.list-row .del{font-size:12px;color:red;text-decoration:none;margin:0 5px;padding:2px 3px;background-color:#fff1f0;border:1px solid #ffa39e;border-radius:2px}.list-row .recall{font-size:12px;color:#00abd2;text-decoration:none;margin:0 5px;padding:2px 3px;background-color:rgb(0,171,210,.05);border:1px solid #00abd2;border-radius:2px}.send{display:flex;flex-direction:row;justify-content:flex-start;align-items:center}.send .avatar{display:block;position:relative;width:50px;height:50px;border:1px solid #efefef}.send .ant-tag{margin-left:10px}.send .text-box{display:flex;flex-direction:column;margin-left:15px}.send .talk{position:relative;max-width:600px;height:auto;border:1px solid #d1d8dc;padding:6px;color:#3d4c5a;line-height:2rem;background-color:#fff;word-break:break-all}.send .talk:after{display:block;position:absolute;top:calc(50% - 5px);left:-6px;width:10px;height:10px;content:' ';border-bottom:1px solid #d1d8dc;border-left:1px solid #d1d8dc;transform:rotate(45deg);background-color:#fff}.send .talk img{max-width:480px;max-height:400px}.send .user-name{font-family:'Microsoft YaHei';color:#222;padding:5px 0}.send .user-name em{font-style:normal;color:#999}.send time{color:#999;padding:5px 0}.reply{display:flex;flex-direction:row-reverse;justify-content:flex-start;align-items:center}.reply .avatar{display:block;position:relative;width:50px;height:50px;border:1px solid #efefef}.reply .text-box{display:flex;flex-direction:column;margin-right:15px}.reply .user-name{font-family:'Microsoft YaHei';color:#222}.reply .user-name em{font-style:normal;color:#999}.reply .talk{position:relative;max-width:600px;border:1px solid #d1d8dc;padding:6px;color:#3d4c5a;line-height:2rem;background-color:#94ee6a;word-break:break-all}.reply .talk:after{display:block;position:absolute;top:calc(50% - 5px);right:-6px;width:10px;height:10px;content:' ';border-top:1px solid #d1d8dc;border-right:1px solid #d1d8dc;transform:rotate(45deg);background-color:#94ee6a}.reply img{max-width:480px;max-height:400px}.message{display:flex;flex-direction:column;justify-content:center;align-items:center}.message p{color:#222;background-color:#ddd;padding:5px 20px;border-radius:5px}.message .other{display:flex;flex-direction:row}</style><div class=list-root id=target></div><script>window.onload = () => {
-				const { search } = window.location;
-				const file = parseURLSearch(search, 'file');
-				const p = parseURLSearch(search, 'p');
-				let task = [];
-
-				for (let i = 0; i < Number(p); i++) {
-					task = task.concat([loadJSON(`public/data/${file}-${i + 1}.json`, 'data')]);
-				}
-				Promise.all(task)
-					.then((data) => {
-						return data
-							.map((i) => i.row)
-							.reduce((total, current) => {
-								total = total.concat(current);
-								return total;
-							}, []);
-					})
-					.then((data) => {
-						$('#target').html(render(data));
-					})
-					.catch((err) => console.log(err));
-			};
-
-			function onLoadError($ele) {
-				const notError = $ele.getAttribute('data-has-error') === '0';
-				if (notError) {
-					$ele.setAttribute('data-has-error', '1');
-					const contentExport = $ele.getAttribute('data-content-export');
-					$ele.setAttribute('src', contentExport);
-				}
-			}
-
-			function renderContent(record) {
-				switch (record.type) {
-					case 'text':
-						return `<div class="talk">${record.content}</div>`;
-					case 'photo':
-						return `<div class="talk"><img src="${record.content}" data-has-error="0" data-content-export="${record.content_export}" onerror="onLoadError(this)" /></div>`;
-					case 'video':
-						return `<div class="talk"><div>视频：${record.content}</div><video src="${record.content}" data-has-error="0" data-content-export="${record.content_export}" onerror="onLoadError(this)" style="max-width:580px;max-height:500px"></video></div>`;
-					case 'audio':
-						return `<div class="talk">音频：${record.content}</div>`;
-					case 'reward':
-						return `<div class="talk">红包：${JSON.stringify(record.content)}</div>`;
-					case 'transfer':
-						return `<div class="talk">转帐：${JSON.stringify(record.content)}</div>`;
-					case 'file':
-						return `<div class="talk">文件/附件：${record.content}</div>`;
-					case 'audio_call':
-						return `<div class="talk">音频通话</div>`;
-					case 'video_call':
-						return `<div class="talk">视频通话</div>`;
-					case 'locate':
-						return `<div class="talk">位置消息：${JSON.stringify(
-							record.content
-						)}</div>`;
-					default:
-						return `<div class="talk">${JSON.stringify(record.content)}</div>`;
-				}
-			}
-
-			function renderDelMark(mark) {
-				switch (mark) {
-					case 0:
-						return '';
-					case 1:
-					case true:
-						return '<span class="del">已删除</span>';
-					case 2:
-						return '<span class="recall">已撤回</span>';
-					default:
-						return '';
-				}
-			}
-
-			function render(data) {
-				let html = '';
-				data.forEach((item) => {
-					if (item.type === 'message') {
-						html += `<div class="list-row"><div class="message"><p>${
-							item.content
-						}</p><div className="other"><time>${item.time}</time></div>${renderDelMark(
-							item.del
-						)}</div></div>`;
-					} else if (item.send) {
-						html += `<div class="list-row"><div class="reply"><img src="${
-							item.avatar
-						}" data-has-error="0" data-content-export="${
-							item.avatar_export
-						}" onerror="onLoadError(this)" class="avatar" /><div class="text-box"><div class="user-name"><span>${
-							item.nickname
-						}</span><em>(${item.id})</em></div>${renderContent(item)}<time>${
-							item.time
-						}</time></div>${renderDelMark(item.del)}</div></div>`;
-					} else {
-						html += `<div class="list-row"><div class="send"><img src="${
-							item.avatar
-						}" data-has-error="0" data-content-export="${
-							item.avatar_export
-						}" onerror="onLoadError(this)" class="avatar"/><div class="text-box"><div class="user-name"><span>${
-							item.nickname
-						}</span><em>(${item.id})</em></div>${renderContent(item)}<time>${
-							item.time
-						}</time></div>${renderDelMark(item.del)}</div></div>`;
-					}
-				});
-				return html;
-			}
-
-			function loadJSON(filePath, exportName = 'data') {
-				let $script = document.createElement('script');
-				return new Promise((resolve, reject) => {
-					$script.src = filePath;
-					$script.addEventListener('load', () => {
-						document.body.removeChild($script);
-						resolve(window[exportName]);
-					});
-					$script.addEventListener('error', (event) => {
-						document.body.removeChild($script);
-						reject(event);
-					});
-					document.body.appendChild($script);
-				});
-			}
-			function parseURLSearch(search, name) {
-				if (window.URLSearchParams !== undefined) {
-					return new URLSearchParams(search).get(name);
-				}
-
-				if (search.startsWith('?')) {
-					search = search.substring(1);
-				}
-				const kv = search.split('&');
-				let value = null;
-				for (let i = 0; i < kv.length; i++) {
-					const [k, v] = kv[i].split('=');
-					if (k === name) {
-						value = v;
-						break;
-					}
-				}
-				return value;
-			}</script>
+<!doctypehtml><html lang=zh-CN><meta charset=UTF-8><meta content="IE=edge"http-equiv=X-UA-Compatible><meta content="width=device-width,initial-scale=1"name=viewport><title>打印视图</title><script src=assert/polyfill/polyfill.min.js></script><script src=assert/jquery/jquery.1.12.4.min.js></script><style>html{margin:0;padding:0;font-size:62.5%}body{margin:0;padding:0;font-size:1.4rem;font-family:'Microsoft Yahei',NSimSun}.list-root{margin:0 20px;padding:0}.list-row{list-style-type:none;margin:0;padding:2px 10px}.list-row .del{font-size:12px;color:red;text-decoration:none;margin:0 5px;padding:2px 3px;background-color:#fff1f0;border:1px solid #ffa39e;border-radius:2px}.list-row .recall{font-size:12px;color:#00abd2;text-decoration:none;margin:0 5px;padding:2px 3px;background-color:rgb(0,171,210,.05);border:1px solid #00abd2;border-radius:2px}.send{display:flex;flex-direction:row;justify-content:flex-start;align-items:center}.send .avatar{display:block;position:relative;width:50px;height:50px;border:1px solid #efefef}.send .ant-tag{margin-left:10px}.send .text-box{display:flex;flex-direction:column;margin-left:15px}.send .talk{position:relative;max-width:600px;height:auto;border:1px solid #d1d8dc;padding:6px;color:#3d4c5a;line-height:2rem;background-color:#fff;word-break:break-all}.send .talk:after{display:block;position:absolute;top:calc(50% - 5px);left:-6px;width:10px;height:10px;content:' ';border-bottom:1px solid #d1d8dc;border-left:1px solid #d1d8dc;transform:rotate(45deg);background-color:#fff}.send .talk img{max-width:480px;max-height:400px}.send .user-name{font-family:'Microsoft YaHei';color:#222;padding:5px 0}.send .user-name em{font-style:normal;color:#999}.send time{color:#999;padding:5px 0}.reply{display:flex;flex-direction:row-reverse;justify-content:flex-start;align-items:center}.reply .avatar{display:block;position:relative;width:50px;height:50px;border:1px solid #efefef}.reply .text-box{display:flex;flex-direction:column;margin-right:15px}.reply .user-name{font-family:'Microsoft YaHei';color:#222}.reply .user-name em{font-style:normal;color:#999}.reply .talk{position:relative;max-width:600px;border:1px solid #d1d8dc;padding:6px;color:#3d4c5a;line-height:2rem;background-color:#94ee6a;word-break:break-all}.reply .talk:after{display:block;position:absolute;top:calc(50% - 5px);right:-6px;width:10px;height:10px;content:' ';border-top:1px solid #d1d8dc;border-right:1px solid #d1d8dc;transform:rotate(45deg);background-color:#94ee6a}.reply img{max-width:480px;max-height:400px}.message{display:flex;flex-direction:column;justify-content:center;align-items:center}.message p{color:#222;background-color:#ddd;padding:5px 20px;border-radius:5px}.message .other{display:flex;flex-direction:row}</style><div class=list-root id=target></div><script>function onLoadError(e){if("0"===e.getAttribute("data-has-error")){e.setAttribute("data-has-error","1");const t=e.getAttribute("data-content-export");e.setAttribute("src",t)}}function renderContent(e){switch(e.type){case"text":return`<div class="talk">${e.content}</div>`;case"photo":return`<div class="talk"><img src="${e.content}" data-has-error="0" data-content-export="${e.content_export}" onerror="onLoadError(this)" /></div>`;case"video":return`<div class="talk"><div>视频：${e.content}</div><video src="${e.content}" data-has-error="0" data-content-export="${e.content_export}" onerror="onLoadError(this)" style="max-width:580px;max-height:500px"></video></div>`;case"audio":return`<div class="talk">音频：${e.content}</div>`;case"reward":return`<div class="talk">红包：${JSON.stringify(e.content)}</div>`;case"transfer":return`<div class="talk">转帐：${JSON.stringify(e.content)}</div>`;case"file":return`<div class="talk">文件/附件：${e.content}</div>`;case"audio_call":return`<div class="talk">音频通话</div>`;case"video_call":return`<div class="talk">视频通话</div>`;case"locate":return`<div class="talk">位置消息：${JSON.stringify(e.content)}</div>`;default:return`<div class="talk">${JSON.stringify(e.content)}</div>`}}function renderDelMark(e){switch(e){case 0:return"";case 1:case!0:return'<span class="del">已删除</span>';case 2:return'<span class="recall">已撤回</span>';default:return""}}function render(e){let t="";return e.forEach(e=>{"message"===e.type?t+=`<div class="list-row"><div class="message"><p>${e.content}</p><div className="other"><time>${e.time}</time></div>${renderDelMark(e.del)}</div></div>`:e.send?t+=`<div class="list-row"><div class="reply"><img src="${e.avatar}" data-has-error="0" data-content-export="${e.avatar_export}" onerror="onLoadError(this)" class="avatar" /><div class="text-box"><div class="user-name"><span>${e.nickname}</span><em>(${e.id})</em></div>${renderContent(e)}<time>${e.time}</time></div>${renderDelMark(e.del)}</div></div>`:t+=`<div class="list-row"><div class="send"><img src="${e.avatar}" data-has-error="0" data-content-export="${e.avatar_export}" onerror="onLoadError(this)" class="avatar"/><div class="text-box"><div class="user-name"><span>${e.nickname}</span><em>(${e.id})</em></div>${renderContent(e)}<time>${e.time}</time></div>${renderDelMark(e.del)}</div></div>`}),t}function loadJSON(e,t="data"){let r=document.createElement("script");return new Promise((a,n)=>{r.src=e,r.addEventListener("load",()=>{document.body.removeChild(r),a(window[t])}),r.addEventListener("error",e=>{document.body.removeChild(r),n(e)}),document.body.appendChild(r)})}function parseURLSearch(e,t){if(void 0!==window.URLSearchParams)return new URLSearchParams(e).get(t);e.startsWith("?")&&(e=e.substring(1));const r=e.split("&");let a=null;for(let e=0;e<r.length;e++){const[n,s]=r[e].split("=");if(n===t){a=s;break}}return a}window.onload=(()=>{const{search:e}=window.location,t=parseURLSearch(e,"file"),r=parseURLSearch(e,"p");let a=[];for(let e=0;e<Number(r);e++)a=a.concat([loadJSON(`public/data/${t}-${e+1}.json`,"data")]);Promise.all(a).then(e=>e.map(e=>e.row).reduce((e,t)=>e=e.concat(t),[])).then(e=>{$("#target").html(render(e))}).catch(e=>console.log(e))});</script>
