--- a/preview_es6.html
+++ b/preview_es6.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>打印视图</title>
 		<script src="assert/polyfill/polyfill.min.js"></script>
 		<script src="assert/jquery/jquery.1.12.4.min.js"></script>
 		<style type="text/css">
