--- a/preview_es6.html
+++ b/preview_es6.html
@@ -186,6 +186,17 @@
 				display: flex;
 				flex-direction: row;
 			}
+			cite {
+				display: block;
+				margin-top: 5px;
+				font-size: 1.2rem;
+				font-style: italic;
+				padding: 2px 5px;
+				background-color: #ddd;
+				border-radius: 2px;
+				border: 1px solid #d1d8dc;
+				max-width: 600px;
+			}
 		</style>
 	</head>
 	<body>
@@ -229,6 +240,10 @@
 				switch (record.type) {
 					case 'text':
 						return `<div class="talk">${record.content}</div>`;
+					case 'reference':
+						return `<div class="talk">${record.content}</div>
+								<cite>${record.cite}</cite>
+								`;
 					case 'photo':
 						return `<div class="talk"><img src="${record.content}" data-has-error="0" data-content-export="${record.content_export}" onerror="onLoadError(this)" /></div>`;
 					case 'video':
